<resources>
    <string name="app_name">RPG - Pen and Paper Companion</string>
    <string name="activity_abf_main_menu">ABF Main Menu</string>
    <string name="activity_wod_main_menu">World Of Darkness</string>
    <string name="activity_wod_vtm_clans">VTM Clans</string>
    <string name="activity_wod_vtm_clans_camarilla">Camarilla Clans</string>
    <string name="activity_wod_vtm_clans_brujah">Clan Brujah</string>
    <string name="activity_wod_vtm_brujah_his">History of the Brujah Clan</string>
    <string name="activity_char_sheet">Character Sheet</string>
    <string name="activity_wod_vtm_clans_gangrel">Clan Gangrel</string>
    <string name="activity_wod_vtm_clans_nosferatu">Clan Nosferatu</string>
    <string name="activity_wod_vtm_clans_malkavian">Clan Malkavian</string>
    <string name="activity_wod_vtm_clans_ventrue">Clan Ventrue</string>
    <string name="activity_wod_vtm_clans_toreador">Clan Toreador</string>
    <string name="activity_wod_vtm_clans_tremere">Clan Tremere</string>
    <string name="activity_wod_vtm_clans_sabbat">Sabbat Clans</string>
    <string name="activity_abf_combat_tools">Combat Tools</string>
    <string name="activity_abf_basic_info">Basic Information</string>
    <string name="activity_abf_class_race">Class and Race</string>
    <string name="activity_abf_combat_abilities">Combat Abilities</string>
    <string name="activity_abf_magic_abilities">Magic Abilities</string>
    <string name="activity_abf_main_characteristics">Main Characteristics</string>
    <string name="activity_abf_ki_abilities">Ki Abilities</string>
    <string name="activity_abf_psi_abilities">Psi Abilities</string>
    <string name="activity_abf_secondary_abilities">Secondary Abilities</string>
    <string name="activity_inventory">Inventory</string>
    <string name="activity_load_character">Load Character Menu</string>
    <string name="title_activity_wodvtmclans" translatable="false">WODVTMCLANS</string>
    <string name="character_creation">Character Creation</string>
    <string name="clans">Clans</string>
    <string name="alliances">Alliances</string>
    <string name="common_dice_pools">Common Dice Pools</string>
    <string name="the_traditions">The Traditions</string>
    <string name="tables">Tables</string>
    <string name="signature_characters">Signature Characters</string>
    <string name="my_characters">My Characters</string>
    <string name="go_back">Go Back</string>
    <string name="disciplines">Disciplines</string>
    <string name="create_new_character">Create New Character</string>
    <string name="attributes">Attributes</string>
    <string name="basic_information">Basic Information</string>
    <string name="character">Character:</string>
    <string name="chronicle">Chronicle:</string>
    <string name="clan">Clan:</string>
    <string name="introduce_your_name">Your Name</string>
    <string name="introduce_the_chronicle_s_name">Chronicle\'s Name</string>
    <string name="player">Player:</string>
    <string name="introduce_your_character_name">Your character Name</string>
    <string name="history">History</string>
    <string name="character_creation_tips">Character Creation Tips</string>
    <string name="stereotypes">Stereotypes</string>
    <string name="historyBrujah">The legacy of the Brujah is one of halcyon greatness marred by their own fiery natures. Theirs was the glory of ancient Carthage, but Ventrue treachery in ancient Rome brought the dream to an end. Since then, the Brujah have borne a grudge. Tonight, the Brujah are rebels and provocateurs, bat-swinging hooligans and agents of change in a society long crippled by stasis. As rebels, it’s in their nature to challenge the status quo — though sometimes, without adequate opposition, they embody the status quo themselves. It works out fine, because there’s always a hot-blooded Brujah waiting in the wings to bring down an uppity Clanmate grown too comfortable in the role of rebel-turned-dictator. More so than any other Clan, the Brujah still feel the flames of the passions that once inspired them as mortals. Clan Brujah loves a cause and is quick to act on a stirring speech, accusation of injustice, or a call to arms. This connection to passion can be a blessing, but inspiration can also yield to the madness and hunger of the Beast. No wise Prince turns his back on the Brujah, and rare is the Brujah who would allow herself to be manipulated or pandered to. A Brujah is her own master, first and foremost, and those who would bring her to heel face a terrible task. A Brujah who thinks she’s getting the short end of the stick will tear an enemy to ribbons first and maybe remember to ask questions later, no matter if he’s a Primogen or a mortal authority. Some Kindred historians claim that the Brujah have parlayed their ancient betrayal into a role as agitators against the very order that they help support. Others claim the Brujah have long since submitted to the will of that same order, being little more than loyal opposition rendered impotent. Most Brujah don’t care either way, as long as someone needs a good ass-kicking and they can be the ones to deliver it.</string>
    <string name="brujah">Brujah</string>
    <string name="gangrel">Gangrel</string>
    <string name="malkavian">Malkavian</string>
    <string name="nosferatu">Nosferatu</string>
    <string name="toreador">Toreador</string>
    <string name="tremere">Tremere</string>
    <string name="ventrue">Ventrue</string>
    <string name="demon_the_fall">Demon: The Fall</string>
    <string name="dhampyr_half_damned">Dhampyr: Half-Damned</string>
    <string name="kue_jin_kindred_of_the_east">Kue-jin: Kindred of The East</string>
    <string name="mage_dark_ages">Mage: Dark Ages</string>
    <string name="mage_the_ascension">Mage: The Ascension</string>
    <string name="select_the_game_you_want">Select the game you want:</string>
    <string name="vampire_dark_ages">Vampire: Dark Ages</string>
    <string name="vampire_the_masquerade">Vampire: The Masquerade</string>
    <string name="werewolf_dark_ages">Werewolf: Dark Ages</string>
    <string name="werewolf_the_apocalypse">Werewolf: The Apocalypse</string>
    <string name="textview">Select the Universe you want</string>
    <string name="wodButton">World Of Darkness</string>
    <string name="superheroes_inc">Superheroes INC</string>
    <string name="call_of_cthulhu">Call of Cthulhu</string>
    <string name="brp_chaosium">BRP - Chaosium</string>
    <string name="besm">Big Eyes, Small Mouth</string>
    <string name="hits">HITS</string>
    <string name="fate">FATE</string>
    <string name="d20">D20</string>
    <string name="cyberpunk">Cyberpunk</string>
    <string name="not_implemented_yet">This feature is not implemented yet</string>
    <string name="blood_variances">Blood Variances</string>
    <string name="bloodlines">Bloodlines</string>
    <string name="camarilla_clans">Camarilla Clans</string>
    <string name="independent_clans">Independent Clans</string>
    <string name="sabbat_clans">Sabbat Clans</string>
    <string name="lasombra">Lasombra</string>
    <string name="tzimisce">Tzimisce</string>
    <string name="physics">Physics</string>
    <string name="power">Strength</string>
    <string name="dexterity">Dexterity</string>
    <string name="strength">Strength</string>
    <string name="stamina">Stamina</string>
    <string name="socials">Socials</string>
    <string name="appearance">Appearance</string>
    <string name="charisma">Charisma</string>
    <string name="manipulation">Manipulation</string>
    <string name="mentals">Mentals</string>
    <string name="perception">Perception</string>
    <string name="intelligence">Intelligence</string>
    <string name="wits">Wits</string>
    <string name="abillities">Abillities</string>
    <string name="general_info">General Info</string>
    <string name="chat">Chat</string>
    <string name="general_character_information">General Character Information</string>
    <string name="add_races">Add Races</string>
    <string name="add_classes">Add Classes</string>
    <string name="character_generator">Character Generator</string>
    <string name="combat_tools">Combat Tools</string>
    <string name="dice_roller">Dice Roller</string>
    <string name="herramientas_de_anima_beyond_fantasy">Anima Beyond Fantasy</string>
    <string name="melee_combat">Melee Combat</string>
    <string name="action_reference_chart">Action Reference Chart</string>
    <string name="aimed_attacks_reference_chart">Aimed Attacks Reference Chart</string>
    <string name="combat_technics_definition">Combat Techniques Definition</string>
    <string name="damage_calculator">Damage Calculator</string>
    <string name="initiative_calculator">Initiative Calculator</string>
    <string name="location_refference_chart">Location Reference Chart</string>
    <string name="magic_in_combat">Magic In Combat</string>
    <string name="ranged_combat_refference_charts">Ranged Combat Reference Charts</string>
    <string name="ranged_combat">Ranged Combat</string>
    <string name="special_situations_reference_chart">Special Situations Reference Chart</string>
    <string name="weapon_breakage_calculator">Weapon Breakage Calculator</string>
    <string name="weapons_refference_chart">Weapons Reference Chart</string>
    <string name="attacker">Attacker</string>
    <string name="defender">Defender</string>
    <string name="block">Block</string>
    <string name="button">Button</string>
    <string name="dodge">Dodge</string>
    <string name="set_the_modifiers">Set the modifiers</string>
    <string name="attack_hability">Attack Ability</string>
    <string name="defense_abitilty">Defense Abitilty</string>
    <string name="result_n">RESULT</string>
    <string name="att_win">Attacker wins and deals: </string>
    <string name="att_win_botch">Attacker wins with Defender botch and deals: </string>
    <string name="botchlevel">The botch is of </string>
    <string name="att_los">Defender wins and can strike back</string>
    <string name="att_dam">damage points</string>
    <string name="attack_damage">Attack Damage</string>
    <string name="melee_combat_simulator">Melee Combat Simulator</string>
    <string name="roll_combat">Roll Combat</string>
    <string-array name="ABFCCModifiers"> 
        <item>Flank</item>
        <item>Back</item>
        <item>Surprise</item>
        <item>Partial Blindness</item>
        <item>Total Blindness</item>
        <item>Higher Position</item>
        <item>Knocked Down</item>
        <item>Minor Paralysis</item>
        <item>Partial Paralysis</item>
        <item>Total Paralysis</item>
        <item>Threatened</item>
        <item>Levitating</item>
        <item>Flight (type 7 to 14)</item>
        <item>Flight (type 15 or more)</item>
        <item>Charging</item>
        <item>Drawing Weapon</item>
        <item>Reduced Space</item>
        <item>Small Adversary</item>
        <item>Tiny Adversary</item>
    </string-array>
    <string-array name="ABFCCMValuesAttack">
        <item>-10</item>
        <item>-30</item>
        <item>0</item>
        <item>-30</item>
        <item>-100</item>
        <item>20</item>
        <item>-30</item>
        <item>-20</item>
        <item>-80</item>
        <item>-200</item>
        <item>-20</item>
        <item>-20</item>
        <item>10</item>
        <item>15</item>
        <item>10</item>
        <item>-25</item>
        <item>-40</item>
        <item>-10</item>
        <item>-20</item>
    </string-array>
    <string name="anima_beyond_fantasy">Anima Beyond Fantasy</string>
    <string name="log_out">Log Out</string>
</resources>