<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.noeselmastersonlosdados.sliferdragon.penandpapercompanion.PandPMainMenu"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="casual"
        android:text="@string/textview"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2">

        <Button
            android:id="@+id/logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="log_out"
            android:text="@string/log_out" />

        <Button
            android:id="@+id/button12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="delete_account"
            android:text="Delete Account"
            android:textColor="@android:color/holo_red_dark" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="431dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView28">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goto_ABFTools"
                android:text="@string/anima_beyond_fantasy" />

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goto_BESM_Menu"
                android:text="@string/besm" />

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="not_implemented_yet"
                android:text="@string/brp_chaosium" />

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="not_implemented_yet"
                android:text="@string/call_of_cthulhu" />

            <Button
                android:id="@+id/button10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="not_implemented_yet"
                android:text="@string/cyberpunk" />

            <Button
                android:id="@+id/button11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="not_implemented_yet"
                android:text="@string/d20" />

            <Button
                android:id="@+id/button13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="not_implemented_yet"
                android:text="@string/fate" />

            <Button
                android:id="@+id/button14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="not_implemented_yet"
                android:text="@string/hits" />

            <Button
                android:id="@+id/button15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="not_implemented_yet"
                android:text="@string/superheroes_inc" />

            <Button
                android:id="@+id/button16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goto_WOD_Menu"
                android:text="@string/wodButton" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
