<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/drawer_layout"
    tools:context="com.noeselmastersonlosdados.sliferdragon.penandpapercompanion.GeneralMenus.MainMenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/textview"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="normal|bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/button6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="goto_ABFTools"
                    android:text="Anima Beyond Fantasy" />

                <Button
                    android:id="@+id/button7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="goto_BESM_Menu"
                    android:text="@string/besm" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="not_implemented_yet"
                    android:text="@string/brp_chaosium" />

                <Button
                    android:id="@+id/button9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="not_implemented_yet"
                    android:text="@string/call_of_cthulhu" />

                <Button
                    android:id="@+id/button10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="not_implemented_yet"
                    android:text="@string/cyberpunk" />

                <Button
                    android:id="@+id/button11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="not_implemented_yet"
                    android:text="@string/d20" />

                <Button
                    android:id="@+id/button13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="not_implemented_yet"
                    android:text="@string/fate" />

                <Button
                    android:id="@+id/button14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="not_implemented_yet"
                    android:text="@string/hits" />

                <Button
                    android:id="@+id/button15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="not_implemented_yet"
                    android:text="@string/superheroes_inc" />

                <Button
                    android:id="@+id/button16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="goto_WOD_Menu"
                    android:text="@string/wodButton" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
