<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.noeselmastersonlosdados.sliferdragon.penandpapercompanion.WorldOfDarkness.WOD_Menu">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:text="@string/select_the_game_you_want"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:layout_weight="0.54"
                android:fontFamily="casual"
                android:typeface="normal"
                android:textSize="18sp"
                android:textColor="?attr/actionMenuTextColor"
                android:textStyle="normal|bold"
                android:textAlignment="center" />

            <Button
                android:text="@string/vampire_the_masquerade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/vtm"
                android:layout_marginTop="19dp"
                android:layout_below="@+id/textView"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:onClick="startVTMMode" />

            <Button
                android:text="@string/vampire_dark_ages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/vda"
                android:layout_below="@+id/vtm"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:elevation="3dp" />

            <Button
                android:text="@string/werewolf_the_apocalypse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/vda"
                android:layout_alignParentStart="true"
                android:id="@+id/wta"
                android:layout_alignParentEnd="true" />

            <Button
                android:text="@string/werewolf_dark_ages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/wda"
                android:layout_below="@+id/wta"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true" />

            <Button
                android:text="@string/mage_the_ascension"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mta"
                android:layout_below="@+id/wda"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true" />

            <Button
                android:text="@string/mage_dark_ages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mda"
                android:layout_below="@+id/mta"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true" />

            <Button
                android:text="@string/kue_jin_kindred_of_the_east"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/kue"
                android:layout_below="@+id/mda"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true" />

            <Button
                android:text="@string/dhampyr_half_damned"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dha"
                android:layout_below="@+id/kue"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true" />

            <Button
                android:text="@string/demon_the_fall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dtf"
                android:layout_below="@+id/dha"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
