<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_wodvtmclansbrujah"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.noeselmastersonlosdados.sliferdragon.penandpapercompanion.WorldOfDarkness.WODVTMCLANSBrujah">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_weight="0.06">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:text="@string/history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/historyButton"
                    android:onClick="hide_showHistory" />

                <Button
                    android:text="@string/character_creation_tips"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/charCreationTipsText" />

                <Button
                    android:text="@string/stereotypes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/stereotypesButton" />

            </LinearLayout>
        </ScrollView>

        <Button
            android:text="@string/go_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/goBackButton" />
    </LinearLayout>

</RelativeLayout>
